redux sync and async with reselct lib

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "robofriends",
-  "homepage": "https://pranta-barua007.github.io/robofriends",
+  "name": "robofriends-react-redux-v2",
+  "homepage": "https://pranta-barua007.github.io/robofriends-react-redux-v2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
